//
//  Constansts.swift
//

import Foundation

enum LoginModuleConstants {
    enum ErrorConstants {
        static let userNamePasswordIncomplete = "User name and password are mandatory"
    }
    static let enterUsername = "Enter Email"
    static let enterPassword = "Enter Password"
    static let login = "LOGIN"
    static let welcomeMsg = "Welcome User!"
}

enum CardListViewConstants {
    static let cardsTittle = "Cards"
}
